Add ui elements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">InAppUpdates</string>
+
+    <string name="update_available_immediate_heading">The app needs an immediate update</string>
+    <string name="update_available_immediate_message">The app needs an immediate update to continue using the app. Please update the app from the Play Store.</string>
+    <string name="update_available_immediate_action">Update</string>
+    <string name="update_available_later">Later</string>
+    <string name="update_available_flexible_message">The app has an update available.</string>
+    <string name="download">Download</string>
+    <string name="install">Install</string>
+    <string name="update_downloaded_restart_to_install">Update downloaded. Restart to install.</string>
 </resources>
